--- a/sections/table.liquid
+++ b/sections/table.liquid
@@ -3,41 +3,62 @@
         <span class="font-bold"> PHEN24</span> <br/>
         is the All-Around Best Fat Burner!
     </div>
-    <div class="mt-7 mx-3 flex rounded-rounded-3 bg-all-night flex-col p-2 -z-20 text-white text-2xs">
+    <div class="mt-7 mx-3 flex rounded-rounded-3 bg-all-night flex-row p-2 -z-20 text-white text-2xs font-bold">
             <div class="flex grow-2 flex-col">
                 <div class="flex h-11 m-2">
                     <p></p>
                 </div>
-                <div class="flex m-2 grow">
+                <div class="flex h8 p-2 border-t">
                     <p>Number of natural<br/> ingredients</p>
                 </div>
-                <div class="flex m-2 grow"">
+                <div class="flex h8 p-2 border-t">
                     <p>Daytime fat <br/>burning formula</p>
                 </div>
-                <div class="flex m-2 grow"">
-                    <p>Nighttime fat burning<br/>  formula</p>
+                <div class="flex h8 p-2 border-t">
+                    <p>Nighttime fat burning<br/> formula</p>
                 </div>
-                <div class="flex m-2 grow"">
-                    <p>No habit-forming<br/>  melatonin</p>
+                <div class="flex h8 p-2 border-t">
+                    <p>No habit-forming<br/> melatonin</p>
                 </div>
-                <div class="flex m-2 grow"">
-                    <p>Buy 2 + Get 1 Free<br/>  special offer</p>
+                <div class="flex h8 p-2 border-t">
+                    <p>Buy 2 + Get 1 Free<br/> special offer</p>
                 </div>
-                <div class="flex m-2 text-3xs grow"">
+                <div class="flex h8 p-2 text-3xs border-t">
                     <p>100% satisfaction, 60-day<br/> money back guarantee</p>
                 </div>
             </div>
-            <div class="grow">
-
+            <div class="grow  flex-col">
+                <div class="flex h-11 m-2">
+                    <p class="font-normal">PHEN24
+                        2 BOTTLES!!</p>
+                </div>
+                <div class="flex h8 p-2 border-t justify-center items-center">
+                    <p class="font-normal text-2xs"></p>
+                </div>
+                <div class="flex h8 p-2 border-t">
+                    
+                </div>
+                <div class="flex h8 p-2 border-t">
+                    
+                </div>
+                <div class="flex h8 p-2 border-t">
+                    
+                </div>
+                <div class="flex h8 p-2 border-t">
+                    
+                </div>
+                <div class="flex h8 p-2 text-3xs border-t">
+                    
+                </div>
             </div>
-            <div class="grow">
-
+            <div class="grow flex-col">
+2
             </div>
-            <div class="grow">
-
+            <div class="grow flex-col">
+3
             </div>
-            <div class="grow">
-
+            <div class="grow flex-col">
+4
             </div>
     </div>
 </section>
