--- a/sections/table.liquid
+++ b/sections/table.liquid
@@ -3,51 +3,54 @@
         <span class="font-bold"> PHEN24</span> <br/>
         is the All-Around Best Fat Burner!
     </div>
-    <div class="mt-7 mx-3 flex rounded-rounded-3 bg-all-night flex-row p-2 -z-20 text-white text-2xs font-bold">
+    <div class="mt-7 mx-3 px-2 flex rounded-rounded-3 bg-all-night flex-row p-2 -z-20 text-white text-2xs font-bold">
             <div class="flex grow-2 flex-col">
                 <div class="flex h-11 m-2">
-                    <p></p>
+                    
                 </div>
-                <div class="flex h-8 p-2 border-t">
+                <div class="flex h-9 px-2 border-t items-center">
                     <p>Number of natural<br/> ingredients</p>
                 </div>
-                <div class="flex h-8 p-2 border-t">
+                <div class="flex h-9 px-2 border-t items-center">
                     <p>Daytime fat <br/>burning formula</p>
                 </div>
-                <div class="flex h-8 p-2 border-t">
+                <div class="flex h-9 px-2 border-t items-center">
                     <p>Nighttime fat burning<br/> formula</p>
                 </div>
-                <div class="flex h-8 p-2 border-t">
+                <div class="flex h-9 px-2 border-t items-center">
                     <p>No habit-forming<br/> melatonin</p>
                 </div>
-                <div class="flex h-8 p-2 border-t">
+                <div class="flex h-9 px-2 border-t items-center">
                     <p>Buy 2 + Get 1 Free<br/> special offer</p>
                 </div>
-                <div class="flex h-8 p-2 text-3xs border-t">
+                <div class="flex h-9 px-2 text-3xs border-t items-center">
                     <p>100% satisfaction, 60-day<br/> money back guarantee</p>
                 </div>
             </div>
             <div class="grow  flex-col">
-                <div class="flex h-11 m-2">
+                <div class="absolute bg-table-rect h-80 z-10">
+
+                </div>
+                <div class="flex h-11 m-2 items-center">
                     <p class="font-normal">PHEN24
                         2 BOTTLES!!</p>
                 </div>
-                <div class="flex h-8 p-2 border-t justify-center items-center">
+                <div class="flex h-9 px-2 border-t justify-center items-center">
                     <p class="font-normal text-2xs"></p>
                 </div>
-                <div class="flex h-8 p-2 border-t">
+                <div class="flex h-9 px-2 border-t items-center">
                     
                 </div>
-                <div class="flex h-8 p-2 border-t">
+                <div class="flex h-9 px-2 border-t items-center">
                     
                 </div>
-                <div class="flex h-8 p-2 border-t">
+                <div class="flex h-9 px-2 border-t items-center">
                     
                 </div>
-                <div class="flex h-8 p-2 border-t">
+                <div class="flex h-9 px-2 border-t items-center">
                     
                 </div>
-                <div class="flex h-8 p-2 text-3xs border-t">
+                <div class="flex h-9 px-2 text-3xs border-t items-center">
                     
                 </div>
             </div>
