--- a/sections/table.liquid
+++ b/sections/table.liquid
@@ -3,8 +3,8 @@
         <span class="font-bold"> PHEN24</span> <br/>
         is the All-Around Best Fat Burner!
     </div>
-    <div class="mt-7 mx-3 px-2 flex rounded-rounded-3 bg-all-night flex-row p-2 -z-20 text-white text-2xs font-bold">
-            <div class="flex grow-2 flex-col">
+    <div class="relative mt-7 mx-3 px-2 flex rounded-rounded-3 bg-all-night flex-row p-2 -z-20 text-white text-2xs font-bold">
+            <div class="flex w-1/3 flex-col">
                 <div class="flex h-11 m-2">
                     
                 </div>
@@ -27,13 +27,13 @@
                     <p>100% satisfaction, 60-day<br/> money back guarantee</p>
                 </div>
             </div>
-            <div class="grow  flex-col">
-                <div class="absolute bg-table-rect h-80 z-10">
+            <div class="w-1/6 flex-col">
+                <div class="absolute bg-table-rect h-80 w-1/6 z-10">
 
                 </div>
-                <div class="flex h-11 m-2 items-center">
-                    <p class="font-normal">PHEN24
-                        2 BOTTLES!!</p>
+                <div class="flex h-11 m-2 items-end">
+                    <p class="font-normal text-2xs">PHEN24
+                        <span class="text-3xs"><br/>2 BOTTLES!!</span></p>
                 </div>
                 <div class="flex h-9 px-2 border-t justify-center items-center">
                     <p class="font-normal text-2xs"></p>
@@ -54,14 +54,14 @@
                     
                 </div>
             </div>
-            <div class="grow flex-col">
-2
+            <div class="w-1/6 flex-col">
+
             </div>
-            <div class="grow flex-col">
-3
+            <div class="w-1/6 flex-col">
+
             </div>
-            <div class="grow flex-col">
-4
+            <div class="w-1/6 flex-col">
+
             </div>
     </div>
 </section>
