--- a/sections/table.liquid
+++ b/sections/table.liquid
@@ -8,54 +8,95 @@
                 <div class="flex h-11 m-2">
                     
                 </div>
-                <div class="flex h-9 px-2 border-t items-center">
+                <div class="flex h-9 px-1 border-t items-center">
                     <p>Number of natural<br/> ingredients</p>
                 </div>
-                <div class="flex h-9 px-2 border-t items-center">
+                <div class="flex h-9 px-1 border-t items-center">
                     <p>Daytime fat <br/>burning formula</p>
                 </div>
-                <div class="flex h-9 px-2 border-t items-center">
+                <div class="flex h-9 px-1 border-t items-center">
                     <p>Nighttime fat burning<br/> formula</p>
                 </div>
-                <div class="flex h-9 px-2 border-t items-center">
+                <div class="flex h-9 px-1 border-t items-center">
                     <p>No habit-forming<br/> melatonin</p>
                 </div>
-                <div class="flex h-9 px-2 border-t items-center">
+                <div class="flex h-9 px-1 border-t items-center">
                     <p>Buy 2 + Get 1 Free<br/> special offer</p>
                 </div>
-                <div class="flex h-9 px-2 text-3xs border-t items-center">
+                <div class="flex h-9 px-1 text-3xs border-t items-center">
                     <p>100% satisfaction, 60-day<br/> money back guarantee</p>
                 </div>
             </div>
             <div class="w-1/6 flex-col">
-                <div class="absolute bg-table-rect h-80 w-1/6 z-10">
+                <div class="absolute bg-table-rect h-[22rem] w-1/6 -z-10 -top-3">
 
                 </div>
                 <div class="flex h-11 m-2 items-end">
                     <p class="font-normal text-2xs">PHEN24
                         <span class="text-3xs"><br/>2 BOTTLES!!</span></p>
                 </div>
-                <div class="flex h-9 px-2 border-t justify-center items-center">
-                    <p class="font-normal text-2xs"></p>
+                <div class="flex h-9 px-1 border-t justify-center items-center">
+                    <p class="font-normal text-2xs">20</p>
                 </div>
-                <div class="flex h-9 px-2 border-t items-center">
-                    
+                <div class="flex h-9 px-1 border-t items-center justify-center">
+                    <svg width="21" height="17" viewBox="0 0 21 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M0.0644531 9.02278L7.17955 16.1514L20.8419 2.50268L18.8804 0.568359L7.17955 12.2556L1.99874 7.07484L0.0644531 9.02278Z" fill="#5BFF62"/>
+                        </svg>                        
                 </div>
-                <div class="flex h-9 px-2 border-t items-center">
-                    
+                <div class="flex h-9 px-1 border-t items-center justify-center">
+                    <svg width="21" height="17" viewBox="0 0 21 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M0.0644531 9.02278L7.17955 16.1514L20.8419 2.50268L18.8804 0.568359L7.17955 12.2556L1.99874 7.07484L0.0644531 9.02278Z" fill="#5BFF62"/>
+                        </svg>                        
                 </div>
-                <div class="flex h-9 px-2 border-t items-center">
-                    
+                <div class="flex h-9 px-1 border-t items-center justify-center">
+                    <svg width="21" height="17" viewBox="0 0 21 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M0.0644531 9.02278L7.17955 16.1514L20.8419 2.50268L18.8804 0.568359L7.17955 12.2556L1.99874 7.07484L0.0644531 9.02278Z" fill="#5BFF62"/>
+                        </svg> 
                 </div>
-                <div class="flex h-9 px-2 border-t items-center">
-                    
+                <div class="flex h-9 px-1 border-t items-center justify-center">
+                    <svg width="21" height="17" viewBox="0 0 21 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M0.0644531 9.02278L7.17955 16.1514L20.8419 2.50268L18.8804 0.568359L7.17955 12.2556L1.99874 7.07484L0.0644531 9.02278Z" fill="#5BFF62"/>
+                        </svg> 
                 </div>
-                <div class="flex h-9 px-2 text-3xs border-t items-center">
-                    
+                <div class="flex h-9 px-1 text-3xs border-t items-center justify-center">
+                    <svg width="21" height="17" viewBox="0 0 21 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M0.0644531 9.02278L7.17955 16.1514L20.8419 2.50268L18.8804 0.568359L7.17955 12.2556L1.99874 7.07484L0.0644531 9.02278Z" fill="#5BFF62"/>
+                        </svg> 
                 </div>
             </div>
             <div class="w-1/6 flex-col">
-
+                <div class="flex h-11 m-2 items-end">
+                    <p class="font-normal text-2xs">LEAN 
+                        PM
+                        <span class="text-3xs"><br/>1 BOTTLE</span></p>
+                </div>
+                <div class="flex h-9 px-1 border-t justify-center items-center">
+                    <p class="font-normal text-2xs">8</p>
+                </div>
+                <div class="flex h-9 px-1 border-t items-center justify-center">
+                    <svg width="21" height="16" viewBox="0 0 21 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M0 8.45442L7.1151 15.5831L20.7774 1.93432L18.816 0L7.1151 11.6872L1.93429 6.50648L0 8.45442Z" fill="#FFECD0"/>
+                        </svg>                                                                       
+                </div>
+                <div class="flex h-9 px-1 border-t items-center justify-center">
+                    <svg width="21" height="17" viewBox="0 0 21 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M0.0644531 9.02278L7.17955 16.1514L20.8419 2.50268L18.8804 0.568359L7.17955 12.2556L1.99874 7.07484L0.0644531 9.02278Z" fill="#5BFF62"/>
+                        </svg>                        
+                </div>
+                <div class="flex h-9 px-1 border-t items-center justify-center">
+                    <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M15.4434 2.33662L13.6751 0.568359L7.94044 6.30303L2.20576 0.568359L0.4375 2.33662L6.17217 8.07129L0.4375 13.806L2.20576 15.5743L7.94044 9.8396L13.6751 15.5743L15.4434 13.806L9.70874 8.07129L15.4434 2.33662Z" fill="#FFECD0"/>
+                        </svg>                        
+                </div>
+                <div class="flex h-9 px-1 border-t items-center justify-center">
+                    <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M15.4434 2.33662L13.6751 0.568359L7.94044 6.30303L2.20576 0.568359L0.4375 2.33662L6.17217 8.07129L0.4375 13.806L2.20576 15.5743L7.94044 9.8396L13.6751 15.5743L15.4434 13.806L9.70874 8.07129L15.4434 2.33662Z" fill="#FFECD0"/></svg>                        
+                </div>
+                <div class="flex h-9 px-1 text-3xs border-t items-center justify-center">
+                    <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M15.4434 2.33662L13.6751 0.568359L7.94044 6.30303L2.20576 0.568359L0.4375 2.33662L6.17217 8.07129L0.4375 13.806L2.20576 15.5743L7.94044 9.8396L13.6751 15.5743L15.4434 13.806L9.70874 8.07129L15.4434 2.33662Z" fill="#FFECD0"/>
+                        </svg>                         
+                </div>
             </div>
             <div class="w-1/6 flex-col">
 
