--- a/assets/app.css
+++ b/assets/app.css
@@ -585,6 +585,9 @@ video {
 .-z-20 {
   z-index: -20;
 }
+.-z-10 {
+  z-index: -10;
+}
 .m-3 {
   margin: 0.75rem;
 }
@@ -752,6 +755,9 @@ video {
 }
 .h-9 {
   height: 2.25rem;
+}
+.h-\[22rem\] {
+  height: 22rem;
 }
 .min-h-300 {
   min-height: 300px;
@@ -1025,6 +1031,10 @@ video {
   padding-left: 3rem;
   padding-right: 3rem;
 }
+.px-1 {
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
+}
 .pb-8 {
   padding-bottom: 2rem;
 }
@@ -1093,7 +1103,7 @@ video {
   font-size: 10px;
 }
 .text-3xs {
-  font-size: 8px;
+  font-size: 7px;
 }
 .font-bold {
   font-weight: 700;
