--- a/sections/table.liquid
+++ b/sections/table.liquid
@@ -28,11 +28,19 @@
                 </div>
             </div>
             <div class="w-1/6 flex-col">
-                <div class="absolute bg-table-rect h-[22rem] w-1/6 -z-10 -top-3">
-
+                <div class="absolute bg-table-rect h-[22rem] w-1/6 -z-10 -top-1 rounded-rounded-3">
+                    <div class="relative -top-10 w-[110%]">
+                        {% if section.settings.bottles != blank %}
+                        {% include 'responsive-image' with
+                            image: section.settings.bottles,
+                            max_width: 277,
+                            max_height: 283
+                        %}
+                        {% endif %}
+                    </div>
                 </div>
                 <div class="flex h-11 m-2 items-end">
-                    <p class="font-normal text-2xs">PHEN24
+                    <p class="font-normal text-2xs text-center">PHEN24
                         <span class="text-3xs"><br/>2 BOTTLES!!</span></p>
                 </div>
                 <div class="flex h-9 px-1 border-t justify-center items-center">
@@ -66,7 +74,7 @@
             </div>
             <div class="w-1/6 flex-col">
                 <div class="flex h-11 m-2 items-end">
-                    <p class="font-normal text-2xs">LEAN 
+                    <p class="font-normal text-2xs text-center">LEAN 
                         PM
                         <span class="text-3xs"><br/>1 BOTTLE</span></p>
                 </div>
@@ -99,10 +107,72 @@
                 </div>
             </div>
             <div class="w-1/6 flex-col">
-
+                <div class="flex h-11 m-2 items-end">
+                    <p class="font-normal text-2xs text-center">NIGHT 
+                        SHRED
+                        <span class="text-3xs"><br/>1 BOTTLE</span></p>
+                </div>
+                <div class="flex h-9 px-1 border-t justify-center items-center">
+                    <p class="font-normal text-2xs">10</p>
+                </div>
+                <div class="flex h-9 px-1 border-t items-center justify-center">
+                    <svg width="21" height="16" viewBox="0 0 21 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M0 8.45442L7.1151 15.5831L20.7774 1.93432L18.816 0L7.1151 11.6872L1.93429 6.50648L0 8.45442Z" fill="#FFECD0"/>
+                        </svg>                                                                       
+                </div>
+                <div class="flex h-9 px-1 border-t items-center justify-center">
+                    <svg width="21" height="17" viewBox="0 0 21 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M0.0644531 9.02278L7.17955 16.1514L20.8419 2.50268L18.8804 0.568359L7.17955 12.2556L1.99874 7.07484L0.0644531 9.02278Z" fill="#5BFF62"/>
+                        </svg>                        
+                </div>
+                <div class="flex h-9 px-1 border-t items-center justify-center">
+                    <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M15.4434 2.33662L13.6751 0.568359L7.94044 6.30303L2.20576 0.568359L0.4375 2.33662L6.17217 8.07129L0.4375 13.806L2.20576 15.5743L7.94044 9.8396L13.6751 15.5743L15.4434 13.806L9.70874 8.07129L15.4434 2.33662Z" fill="#FFECD0"/>
+                        </svg>                        
+                </div>
+                <div class="flex h-9 px-1 border-t items-center justify-center">
+                    <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M15.4434 2.33662L13.6751 0.568359L7.94044 6.30303L2.20576 0.568359L0.4375 2.33662L6.17217 8.07129L0.4375 13.806L2.20576 15.5743L7.94044 9.8396L13.6751 15.5743L15.4434 13.806L9.70874 8.07129L15.4434 2.33662Z" fill="#FFECD0"/></svg>                        
+                </div>
+                <div class="flex h-9 px-1 text-3xs border-t items-center justify-center">
+                    <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M15.4434 2.33662L13.6751 0.568359L7.94044 6.30303L2.20576 0.568359L0.4375 2.33662L6.17217 8.07129L0.4375 13.806L2.20576 15.5743L7.94044 9.8396L13.6751 15.5743L15.4434 13.806L9.70874 8.07129L15.4434 2.33662Z" fill="#FFECD0"/>
+                        </svg>                         
+                </div>
             </div>
             <div class="w-1/6 flex-col">
-
+                <div class="flex h-11 m-2 items-end">
+                    <p class="font-normal text-2xs text-center">REVBURN
+                        PM
+                        <span class="text-3xs"><br/>1 BOTTLE</span></p>
+                </div>
+                <div class="flex h-9 px-1 border-t justify-center items-center">
+                    <p class="font-normal text-2xs">10</p>
+                </div>
+                <div class="flex h-9 px-1 border-t items-center justify-center">
+                    <svg width="21" height="16" viewBox="0 0 21 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M0 8.45442L7.1151 15.5831L20.7774 1.93432L18.816 0L7.1151 11.6872L1.93429 6.50648L0 8.45442Z" fill="#FFECD0"/>
+                        </svg>                                                                       
+                </div>
+                <div class="flex h-9 px-1 border-t items-center justify-center">
+                    <svg width="21" height="17" viewBox="0 0 21 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M0.0644531 9.02278L7.17955 16.1514L20.8419 2.50268L18.8804 0.568359L7.17955 12.2556L1.99874 7.07484L0.0644531 9.02278Z" fill="#5BFF62"/>
+                        </svg>                        
+                </div>
+                <div class="flex h-9 px-1 border-t items-center justify-center">
+                    <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M15.4434 2.33662L13.6751 0.568359L7.94044 6.30303L2.20576 0.568359L0.4375 2.33662L6.17217 8.07129L0.4375 13.806L2.20576 15.5743L7.94044 9.8396L13.6751 15.5743L15.4434 13.806L9.70874 8.07129L15.4434 2.33662Z" fill="#FFECD0"/>
+                        </svg>                        
+                </div>
+                <div class="flex h-9 px-1 border-t items-center justify-center">
+                    <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M15.4434 2.33662L13.6751 0.568359L7.94044 6.30303L2.20576 0.568359L0.4375 2.33662L6.17217 8.07129L0.4375 13.806L2.20576 15.5743L7.94044 9.8396L13.6751 15.5743L15.4434 13.806L9.70874 8.07129L15.4434 2.33662Z" fill="#FFECD0"/></svg>                        
+                </div>
+                <div class="flex h-9 px-1 text-3xs border-t items-center justify-center">
+                    <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M15.4434 2.33662L13.6751 0.568359L7.94044 6.30303L2.20576 0.568359L0.4375 2.33662L6.17217 8.07129L0.4375 13.806L2.20576 15.5743L7.94044 9.8396L13.6751 15.5743L15.4434 13.806L9.70874 8.07129L15.4434 2.33662Z" fill="#FFECD0"/>
+                        </svg>                         
+                </div>
             </div>
     </div>
 </section>
@@ -114,7 +184,7 @@
     "settings": [
     {
         "type": "image_picker",
-        "id": "success",
+        "id": "bottles",
         "label": "Success Image"
     }
     ],
