--- a/sections/table.liquid
+++ b/sections/table.liquid
@@ -29,7 +29,7 @@
             </div>
             <div class="w-1/6 flex-col">
                 <div class="absolute bg-table-rect h-[22rem] w-1/6 -z-10 -top-1 rounded-rounded-3">
-                    <div class="relative -top-12 w-[110%] -left-3">
+                    <div class="relative -top-12 w-[110%] flex justify-center">
                         {% if section.settings.bottles != blank %}
                         {% include 'responsive-image' with
                             image: section.settings.bottles,
@@ -74,7 +74,7 @@
             </div>
             <div class="w-1/6 flex-col">
                 <div class="absolute w-1/6 -z-10 -top-1">
-                    <div class="relative -top-12 w-[110%] -left-3 flex justify-center">
+                    <div class="relative -top-12 w-[110%] flex justify-center">
                         {% if section.settings.lean != blank %}
                         {% include 'responsive-image' with
                             image: section.settings.lean,
@@ -119,7 +119,7 @@
             </div>
             <div class="w-1/6 flex-col">
                 <div class="absolute w-1/6 -z-10 -top-1">
-                    <div class="relative -top-12 w-[110%] -left-3 flex justify-center">
+                    <div class="relative -top-12 w-[110%] flex justify-center">
                         {% if section.settings.shread != blank %}
                         {% include 'responsive-image' with
                             image: section.settings.shread,
@@ -164,7 +164,7 @@
             </div>
             <div class="w-1/6 flex-col">
                 <div class="absolute w-1/6 -z-10 -top-1">
-                    <div class="relative -top-12 w-[110%] -left-3 flex justify-center">
+                    <div class="relative -top-12 w-[110%] flex justify-center">
                         {% if section.settings.revburn != blank %}
                         {% include 'responsive-image' with
                             image: section.settings.revburn,
