--- a/sections/table.liquid
+++ b/sections/table.liquid
@@ -39,7 +39,7 @@
                         {% endif %}
                     </div>
                 </div>
-                <div class="flex h-11 m-2 items-end">
+                <div class="flex h-11 m-2 items-end justify-center">
                     <p class="font-normal text-2xs text-center">PHEN24
                         <span class="text-3xs"><br/>2 BOTTLES!!</span></p>
                 </div>
@@ -84,7 +84,7 @@
                         {% endif %}
                     </div>
                 </div>
-                <div class="flex h-11 m-2 items-end">
+                <div class="flex h-11 m-2 items-end justify-center">
                     <p class="font-normal text-2xs text-center">LEAN 
                         PM
                         <span class="text-3xs"><br/>1 BOTTLE</span></p>
@@ -129,7 +129,7 @@
                         {% endif %}
                     </div>
                 </div>
-                <div class="flex h-11 m-2 items-end">
+                <div class="flex h-11 m-2 items-end justify-center">
                     <p class="font-normal text-2xs text-center">NIGHT 
                         SHRED
                         <span class="text-3xs"><br/>1 BOTTLE</span></p>
@@ -174,7 +174,7 @@
                         {% endif %}
                     </div>
                 </div>
-                <div class="flex h-11 m-2 items-end">
+                <div class="flex h-11 m-2 items-end justify-center">
                     <p class="font-normal text-2xs text-center">REVBURN
                         PM
                         <span class="text-3xs"><br/>1 BOTTLE</span></p>
