--- a/sections/table.liquid
+++ b/sections/table.liquid
@@ -14,7 +14,7 @@
                 <div class="flex h-9 px-1 border-t items-center">
                     <p>Daytime fat <br/>burning formula</p>
                 </div>
-                <div class="flex h-9 px-1 border-t items-center">
+                <div class="flex h-9 px-1 border-t items-center text-3xs">
                     <p>Nighttime fat burning<br/> formula</p>
                 </div>
                 <div class="flex h-9 px-1 border-t items-center">
