--- a/sections/table.liquid
+++ b/sections/table.liquid
@@ -74,7 +74,7 @@
             </div>
             <div class="w-1/6 flex-col">
                 <div class="absolute w-1/6 -z-10 -top-1">
-                    <div class="relative -top-12 w-[110%] flex justify-center">
+                    <div class="relative -top-10 w-[110%] flex justify-center">
                         {% if section.settings.lean != blank %}
                         {% include 'responsive-image' with
                             image: section.settings.lean,
@@ -93,13 +93,13 @@
                     <p class="font-normal text-2xs">8</p>
                 </div>
                 <div class="flex h-9 px-1 border-t items-center justify-center">
-                    <svg width="21" height="16" viewBox="0 0 21 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M0 8.45442L7.1151 15.5831L20.7774 1.93432L18.816 0L7.1151 11.6872L1.93429 6.50648L0 8.45442Z" fill="#FFECD0"/>
-                        </svg>                                                                       
+                    <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M15.4434 2.33662L13.6751 0.568359L7.94044 6.30303L2.20576 0.568359L0.4375 2.33662L6.17217 8.07129L0.4375 13.806L2.20576 15.5743L7.94044 9.8396L13.6751 15.5743L15.4434 13.806L9.70874 8.07129L15.4434 2.33662Z" fill="#FFECD0"/>
+                        </svg>                                                                   
                 </div>
                 <div class="flex h-9 px-1 border-t items-center justify-center">
-                    <svg width="21" height="17" viewBox="0 0 21 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M0.0644531 9.02278L7.17955 16.1514L20.8419 2.50268L18.8804 0.568359L7.17955 12.2556L1.99874 7.07484L0.0644531 9.02278Z" fill="#5BFF62"/>
+                    <svg width="21" height="16" viewBox="0 0 21 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M0 8.45442L7.1151 15.5831L20.7774 1.93432L18.816 0L7.1151 11.6872L1.93429 6.50648L0 8.45442Z" fill="#FFECD0"/>
                         </svg>                        
                 </div>
                 <div class="flex h-9 px-1 border-t items-center justify-center">
@@ -119,7 +119,7 @@
             </div>
             <div class="w-1/6 flex-col">
                 <div class="absolute w-1/6 -z-10 -top-1">
-                    <div class="relative -top-12 w-[110%] flex justify-center">
+                    <div class="relative -top-10 w-[110%] flex justify-center">
                         {% if section.settings.shread != blank %}
                         {% include 'responsive-image' with
                             image: section.settings.shread,
@@ -138,14 +138,14 @@
                     <p class="font-normal text-2xs">10</p>
                 </div>
                 <div class="flex h-9 px-1 border-t items-center justify-center">
-                    <svg width="21" height="16" viewBox="0 0 21 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M0 8.45442L7.1151 15.5831L20.7774 1.93432L18.816 0L7.1151 11.6872L1.93429 6.50648L0 8.45442Z" fill="#FFECD0"/>
-                        </svg>                                                                       
+                    <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M15.4434 2.33662L13.6751 0.568359L7.94044 6.30303L2.20576 0.568359L0.4375 2.33662L6.17217 8.07129L0.4375 13.806L2.20576 15.5743L7.94044 9.8396L13.6751 15.5743L15.4434 13.806L9.70874 8.07129L15.4434 2.33662Z" fill="#FFECD0"/>
+                        </svg>                                                                   
                 </div>
                 <div class="flex h-9 px-1 border-t items-center justify-center">
-                    <svg width="21" height="17" viewBox="0 0 21 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M0.0644531 9.02278L7.17955 16.1514L20.8419 2.50268L18.8804 0.568359L7.17955 12.2556L1.99874 7.07484L0.0644531 9.02278Z" fill="#5BFF62"/>
-                        </svg>                        
+                    <svg width="21" height="16" viewBox="0 0 21 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M0 8.45442L7.1151 15.5831L20.7774 1.93432L18.816 0L7.1151 11.6872L1.93429 6.50648L0 8.45442Z" fill="#FFECD0"/>
+                        </svg>                         
                 </div>
                 <div class="flex h-9 px-1 border-t items-center justify-center">
                     <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -164,7 +164,7 @@
             </div>
             <div class="w-1/6 flex-col">
                 <div class="absolute w-1/6 -z-10 -top-1">
-                    <div class="relative -top-12 w-[110%] flex justify-center">
+                    <div class="relative -top-10 w-[110%] flex justify-center">
                         {% if section.settings.revburn != blank %}
                         {% include 'responsive-image' with
                             image: section.settings.revburn,
@@ -183,13 +183,13 @@
                     <p class="font-normal text-2xs">10</p>
                 </div>
                 <div class="flex h-9 px-1 border-t items-center justify-center">
-                    <svg width="21" height="16" viewBox="0 0 21 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M0 8.45442L7.1151 15.5831L20.7774 1.93432L18.816 0L7.1151 11.6872L1.93429 6.50648L0 8.45442Z" fill="#FFECD0"/>
-                        </svg>                                                                       
+                    <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M15.4434 2.33662L13.6751 0.568359L7.94044 6.30303L2.20576 0.568359L0.4375 2.33662L6.17217 8.07129L0.4375 13.806L2.20576 15.5743L7.94044 9.8396L13.6751 15.5743L15.4434 13.806L9.70874 8.07129L15.4434 2.33662Z" fill="#FFECD0"/>
+                        </svg>                                                                    
                 </div>
                 <div class="flex h-9 px-1 border-t items-center justify-center">
-                    <svg width="21" height="17" viewBox="0 0 21 17" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M0.0644531 9.02278L7.17955 16.1514L20.8419 2.50268L18.8804 0.568359L7.17955 12.2556L1.99874 7.07484L0.0644531 9.02278Z" fill="#5BFF62"/>
+                    <svg width="21" height="16" viewBox="0 0 21 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M0 8.45442L7.1151 15.5831L20.7774 1.93432L18.816 0L7.1151 11.6872L1.93429 6.50648L0 8.45442Z" fill="#FFECD0"/>
                         </svg>                        
                 </div>
                 <div class="flex h-9 px-1 border-t items-center justify-center">
