--- a/assets/app.css
+++ b/assets/app.css
@@ -573,8 +573,8 @@ video {
 .-top-12 {
   top: -3rem;
 }
-.bottom-0 {
-  bottom: 0px;
+.bottom-3 {
+  bottom: 0.75rem;
 }
 .-top-10 {
   top: -2.5rem;
