--- a/sections/table.liquid
+++ b/sections/table.liquid
@@ -3,7 +3,7 @@
         <span class="font-bold"> PHEN24</span> <br/>
         is the All-Around Best Fat Burner!
     </div>
-    <div class="relative mt-16 mx-3 px-2 flex rounded-rounded-3 bg-all-night flex-row p-2 -z-20 text-white text-2xs font-bold">
+    <div class="relative mt-16 mx-3 px-2 flex rounded-rounded-3 bg-all-night flex-row p-2 -z-20 text-white text-2xs font-bold mb-6">
             <div class="flex w-1/3 flex-col">
                 <div class="flex h-11 m-2">
                     
@@ -14,7 +14,7 @@
                 <div class="flex h-9 px-1 border-t items-center">
                     <p>Daytime fat <br/>burning formula</p>
                 </div>
-                <div class="flex h-9 px-1 border-t items-center text-3xs">
+                <div class="flex h-9 px-1 border-t items-center text-[9px]">
                     <p>Nighttime fat burning<br/> formula</p>
                 </div>
                 <div class="flex h-9 px-1 border-t items-center">
@@ -38,14 +38,14 @@
                         %}
                         {% endif %}
                     </div>
-                    <div class="relative bottom-0">
+                    <div class="relative bottom-3">
                         <div class="absolute">
                             <svg width="56" height="74" viewBox="0 0 56 74" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M55.1343 24.5C55.1343 37.4756 43.5146 48.1343 29 48.1343C14.4854 48.1343 2.86573 37.4756 2.86573 24.5C2.86573 11.5244 14.4854 0.865726 29 0.865726C43.5146 0.865726 55.1343 11.5244 55.1343 24.5Z" stroke="#FF9900" stroke-width="1.73145"/>
                                 <path d="M13.8548 42.7715C14.2469 42.9071 13.7097 43.2109 13.7097 43.2109L13.8548 43C12.4348 45.1117 13.7334 43.3146 13.9981 43.5645C14.4981 46 14.1531 45.3682 14.5807 47.5476C15.6038 52.7205 17.1829 57.7278 19.2022 62.5944C19.5751 63.4936 20.1121 64.3245 20.5733 65.1872L20.707 65.1413C20.6453 64.645 20.6261 64.1339 20.5206 63.6446C20.1937 62.1352 19.818 60.6354 19.4972 59.1248C19.3761 58.5582 19.3452 57.9717 19.2897 57.3913C19.2738 57.2262 19.2909 57.0595 19.3401 56.9011C19.4787 56.4815 19.9311 56.3939 20.2405 56.7553C20.449 56.9982 20.6038 57.2824 20.6949 57.5892C21.1192 59.1115 21.5107 60.6426 21.9135 62.1709C22.4933 64.3772 23.0724 66.5849 23.651 68.7938C23.8156 69.4259 23.9969 70.0607 24.0817 70.705C24.1551 71.2628 24.1116 71.8374 24.093 72.4035C24.0911 72.4675 23.9039 72.5911 23.8287 72.574C23.6201 72.5323 23.422 72.4493 23.2459 72.3299C21.0445 70.7129 18.835 69.1054 16.6599 67.4523C15.3463 66.4543 14.088 65.3832 12.8098 64.3425C12.6812 64.2383 12.5286 64.1319 12.4641 63.9907C12.3877 63.8238 12.3149 63.5749 12.3876 63.4416C12.4706 63.2887 12.7246 63.1291 12.8885 63.1436C13.181 63.1787 13.4617 63.2795 13.7097 63.4384C15.5952 64.6139 17.4696 65.8071 19.3486 66.9937C19.4278 67.0439 19.5154 67.0806 19.6799 67.1656C19.5788 67.0119 19.529 66.9256 19.4686 66.8471C16.1789 62.5483 13.7642 57.7798 11.9226 52.711C11.23 50.8345 10.8079 48.8689 10.669 46.8735C10.5972 45.7771 10.7195 44.668 10.7596 43.5645C10.786 42.8299 10.67 41.8029 11.0941 42.1291C11.0941 41.0728 10.6382 43.6214 11.2793 42.1722C11.8583 40.8728 11.7153 43.5974 12.5854 42.4761C12.716 42.3077 12.7213 42.6711 12.8899 42.547C13.2824 42.2608 13.4569 43.0349 13.8548 42.7715Z" fill="#FF9900"/>
                                 </svg>
                         </div>
-                        <div class="relative">
+                        <div class="relative mx-2 text-center">
                             <p class="text-2xs font-bold">Low as 
                                 $1.40
                                 a day!</p>
@@ -220,6 +220,17 @@
                         </svg>                         
                 </div>
             </div>
+    </div>
+    <div class="relative flex justify-center place-items-center">
+        <a class=" text-lg justify-center text-black flex w-[300px] items-center py-2 whitespace-nowrap px-8 rounded-20 
+        font-normal bg-green-500 uppercase" href="#some_id">
+        Order <span class="font-bold mr-2"> now</span> <svg width="12" height="13" viewBox="0 0 12 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path d="M12 6.5L0.75 12.9952L0.750001 0.00480889L12 6.5Z" fill="black"/>
+            </svg>
+        </a>
+    </div>
+    <div class="relative text-center mb-6 mt-2 text-black">
+        <p class="text-sm font-bold ">60-DAY MONEY BACK GUARANTEE</p>
     </div>
 </section>
 
