--- a/sections/table.liquid
+++ b/sections/table.liquid
@@ -3,7 +3,7 @@
         <span class="font-bold"> PHEN24</span> <br/>
         is the All-Around Best Fat Burner!
     </div>
-    <div class="relative mt-16 mx-3 px-2 flex rounded-rounded-3 bg-all-night flex-row p-2 -z-20 text-white text-2xs font-bold mb-6">
+    <div class="relative mt-16 mx-3 px-2 flex rounded-rounded-3 bg-all-night flex-row p-2 -z-20 text-white text-2xs font-bold mb-12">
             <div class="flex w-1/3 flex-col">
                 <div class="flex h-11 m-2">
                     
@@ -38,7 +38,7 @@
                         %}
                         {% endif %}
                     </div>
-                    <div class="relative bottom-3">
+                    <div class="absolute bottom-3">
                         <div class="absolute">
                             <svg width="56" height="74" viewBox="0 0 56 74" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M55.1343 24.5C55.1343 37.4756 43.5146 48.1343 29 48.1343C14.4854 48.1343 2.86573 37.4756 2.86573 24.5C2.86573 11.5244 14.4854 0.865726 29 0.865726C43.5146 0.865726 55.1343 11.5244 55.1343 24.5Z" stroke="#FF9900" stroke-width="1.73145"/>
@@ -46,7 +46,7 @@
                                 </svg>
                         </div>
                         <div class="relative mx-2 text-center">
-                            <p class="text-2xs font-bold">Low as 
+                            <p class="text-2xs font-bold">Low<br/> as 
                                 $1.40
                                 a day!</p>
                         </div>
