--- a/assets/app.css
+++ b/assets/app.css
@@ -653,6 +653,14 @@ video {
   margin-left: 3.5rem;
   margin-right: 3.5rem;
 }
+.my-7 {
+  margin-top: 1.75rem;
+  margin-bottom: 1.75rem;
+}
+.mx-16 {
+  margin-left: 4rem;
+  margin-right: 4rem;
+}
 .mx-9 {
   margin-left: 2.25rem;
   margin-right: 2.25rem;
