--- a/sections/table.liquid
+++ b/sections/table.liquid
@@ -28,8 +28,8 @@
                 </div>
             </div>
             <div class="w-1/6 flex-col">
-                <div class="absolute bg-table-rect h-[22rem] w-1/6 -z-10 -top-1 rounded-rounded-3">
-                    <div class="relative -top-12 w-[110%] flex justify-center">
+                <div class="absolute bg-table-rect h-[22rem] w-1/6 -z-10 -mt-1 rounded-rounded-3">
+                    <div class="relative -mt-12 w-[110%] flex justify-center">
                         {% if section.settings.bottles != blank %}
                         {% include 'responsive-image' with
                             image: section.settings.bottles,
@@ -86,8 +86,8 @@
                 </div>
             </div>
             <div class="w-1/6 flex-col">
-                <div class="absolute w-1/6 -z-10 -top-1">
-                    <div class="relative -top-10 w-[110%] flex justify-center">
+                <div class="absolute w-1/6 -z-10 -mt-1">
+                    <div class="relative -mt-10 w-[110%] flex justify-center">
                         {% if section.settings.lean != blank %}
                         {% include 'responsive-image' with
                             image: section.settings.lean,
@@ -131,8 +131,8 @@
                 </div>
             </div>
             <div class="w-1/6 flex-col">
-                <div class="absolute w-1/6 -z-10 -top-1">
-                    <div class="relative -top-10 w-[110%] flex justify-center">
+                <div class="absolute w-1/6 -z-10 -mt-1">
+                    <div class="relative -mt-10 w-[110%] flex justify-center">
                         {% if section.settings.shread != blank %}
                         {% include 'responsive-image' with
                             image: section.settings.shread,
@@ -176,8 +176,8 @@
                 </div>
             </div>
             <div class="w-1/6 flex-col">
-                <div class="absolute w-1/6 -z-10 -top-1">
-                    <div class="relative -top-10 w-[110%] flex justify-center">
+                <div class="absolute w-1/6 -z-10 -mt-1">
+                    <div class="relative -mt-10 w-[110%] flex justify-center">
                         {% if section.settings.revburn != blank %}
                         {% include 'responsive-image' with
                             image: section.settings.revburn,
