--- a/assets/app.css
+++ b/assets/app.css
@@ -567,17 +567,8 @@ video {
 .-top-reviews {
   top: -75px;
 }
-.-top-1 {
-  top: -0.25rem;
-}
-.-top-12 {
-  top: -3rem;
-}
 .bottom-3 {
   bottom: 0.75rem;
-}
-.-top-10 {
-  top: -2.5rem;
 }
 .-top-20 {
   top: -5rem;
@@ -748,6 +739,15 @@ video {
 }
 .mb-20 {
   margin-bottom: 5rem;
+}
+.-mt-1 {
+  margin-top: -0.25rem;
+}
+.-mt-12 {
+  margin-top: -3rem;
+}
+.-mt-10 {
+  margin-top: -2.5rem;
 }
 .mt-60 {
   margin-top: 15rem;
