--- a/sections/phen-works.liquid
+++ b/sections/phen-works.liquid
@@ -1,11 +1,11 @@
 <section class="relative bg-all-night text-white flex justify-center">
-    <div class="relative my-7 mx-16">
+    <div class="relative my-7 mx-16 text-center uppercase">
         <p class="text-3xl font-normal">How <span class="font-bold">PHEN24 </span>
             works</p>
     </div>
     <div class="relative mt-4 mx-9 flex flex-col justify-center items-center">
         <div class="text-center text-xl font-bold">
-            <p>STEP 1<span class="text-base">
+            <p>STEP 1<span class="text-base"><br/>
                 Take it Every Morning</span></p>
         </div>
         <div class="mt-4">
@@ -18,7 +18,7 @@
                 {% endif %}
         </div>
         <div class="mt-5 mb-9 text-center font-bold">
-            <p class="text-sm"></p>
+            <p class="text-sm">Take 1 DAY capsule with a glass of water at breakfast — and PHEN24 fights fat-storing cortisol levels all day long.</p>
         </div>
     </div>
 </section>
