--- a/sections/phen-works.liquid
+++ b/sections/phen-works.liquid
@@ -1,4 +1,4 @@
-<section class="relative bg-all-night text-white flex justify-center">
+<section class="relative bg-all-night text-white">
     <div class="relative my-7 mx-16 text-center uppercase">
         <p class="text-3xl font-normal">How <span class="font-bold">PHEN24 </span>
             works</p>
