--- a/assets/app.css
+++ b/assets/app.css
@@ -594,6 +594,9 @@ video {
 .m-3 {
   margin: 0.75rem;
 }
+.m-6 {
+  margin: 1.5rem;
+}
 .m-auto {
   margin: auto;
 }
@@ -612,6 +615,10 @@ video {
   margin-top: 0.75rem;
   margin-bottom: 0.75rem;
 }
+.mx-6 {
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+}
 .mx-4 {
   margin-left: 1rem;
   margin-right: 1rem;
@@ -619,10 +626,6 @@ video {
 .mx-7 {
   margin-left: 1.75rem;
   margin-right: 1.75rem;
-}
-.mx-6 {
-  margin-left: 1.5rem;
-  margin-right: 1.5rem;
 }
 .mx-auto {
   margin-left: auto;
@@ -661,6 +664,9 @@ video {
 .mr-2 {
   margin-right: 0.5rem;
 }
+.mb-8 {
+  margin-bottom: 2rem;
+}
 .mb-7 {
   margin-bottom: 1.75rem;
 }
@@ -672,9 +678,6 @@ video {
 }
 .mt-7 {
   margin-top: 1.75rem;
-}
-.mb-8 {
-  margin-bottom: 2rem;
 }
 .mb-6 {
   margin-bottom: 1.5rem;
@@ -922,6 +925,9 @@ video {
 .border-2 {
   border-width: 2px;
 }
+.border-b-3 {
+  border-bottom-width: 3px;
+}
 .border-b-\[5px\] {
   border-bottom-width: 5px;
 }
@@ -980,6 +986,9 @@ video {
 }
 .bg-all-night {
   background-image: linear-gradient(180deg, #26AAE0 0%, #693D90 64.06%);;
+}
+.bg-expect {
+  background-image: linear-gradient(180deg, #FD1111 0%, #FF9900 100%);;
 }
 .bg-formula-day {
   background-image: linear-gradient(180deg, #EA552E 19.48%, #FF9900 78.45%);;
@@ -1102,6 +1111,10 @@ video {
   font-size: 1.125rem;
   line-height: 1.75rem;
 }
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
 .text-\[22px\] {
   font-size: 22px;
 }
@@ -1122,10 +1135,6 @@ video {
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
-}
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
 }
 .text-2xs {
   font-size: 10px;
