--- a/assets/app.css
+++ b/assets/app.css
@@ -594,9 +594,6 @@ video {
 .m-3 {
   margin: 0.75rem;
 }
-.m-6 {
-  margin: 1.5rem;
-}
 .m-auto {
   margin: auto;
 }
@@ -618,6 +615,10 @@ video {
 .mx-6 {
   margin-left: 1.5rem;
   margin-right: 1.5rem;
+}
+.my-8 {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 .mx-4 {
   margin-left: 1rem;
@@ -664,6 +665,9 @@ video {
 .mr-2 {
   margin-right: 0.5rem;
 }
+.mb-6 {
+  margin-bottom: 1.5rem;
+}
 .mb-8 {
   margin-bottom: 2rem;
 }
@@ -678,9 +682,6 @@ video {
 }
 .mt-7 {
   margin-top: 1.75rem;
-}
-.mb-6 {
-  margin-bottom: 1.5rem;
 }
 .mt-1 {
   margin-top: 0.25rem;
