--- a/sections/expectations.liquid
+++ b/sections/expectations.liquid
@@ -1,13 +1,35 @@
 <section class="relative bg-expect text-white">
-  <div class="m-6 font-normal text-2xl text-center">
-    <h3><span class="font-bold">Here's what to expect</span> if you take PHEN24 <br/>
-      twice a day 
+  <div class="mx-6 mb-6 pt-6 font-normal text-2xl text-center uppercase">
+    <h3><span class="font-bold">Here's what to expect</span><br/> if you take PHEN24 <br/>
+      twice a day <br/>
       <span class="font-bold"></span>for at least 3 months...</span></h3>
   </div>
   <div class="mx-6 mb-8 border-b-3">
     <p class="font-bold">DAY 1</p>
 
     <p>The most common comments we receive from new PHEN24 users are "I have so much energy... all day!" and "I don't care as much about food... especially at night!"
+    </p>
+  </div>
+  <div class="mx-6 my-8 border-b-3">
+    <p class="font-bold">WEEK 1</p>
+
+    <p>After your first week on PHEN24 you may notice that food doesn't have such a big pull as it used to. You've got things to do and "fueling up" is still part of your day — but your appetite doesn't 'run the show' like it may have in the past.
+    </p>
+  </div>
+  <div class="mx-6 my-8 border-b-3">
+    <p class="font-bold">MONTH 1</p>
+
+    <p>After a full month of using PHEN24 you may notice that increased energy, decreased appetite, and a boosted mood (despite eating less) have become the "new normal" for you.
+    </p>
+    <p>But the most exciting change you could hope to experience are positive remarks from people who see you on a regular basis! 
+    </p>
+  </div>
+  <div class="mx-6 my-8 border-b-3">
+    <p class="font-bold">MONTH 3</p>
+
+    <p>After 3 months of enjoying a faster metabolism you may notice that you look and feel slimmer than you have in a long time.
+    </p>
+    <p>That could mean your clothes are fitting so much better — or you may even need to purchase new clothes that you feel more comfortable in. This is a good time to update your profile picture on social media to match your new appearance!
     </p>
   </div>
 </section>
