--- a/sections/expectations.liquid
+++ b/sections/expectations.liquid
@@ -36,7 +36,7 @@
     {% if section.settings.image1 != blank %}
     {% include 'responsive-image' with
         image: section.settings.image1,
-        wrapper_class="img-wrap-expect"
+        wrapper_class: "img-wrap-expect"
     %}
     {% endif %}
   </div>
