--- a/sections/expectations.liquid
+++ b/sections/expectations.liquid
@@ -48,6 +48,7 @@
     margin: 0 3rem;
     width: 100%;
     height: fit-content;
+    max-width: 100% !important;
   }
   .img-expect{
     max-width: 100%;
