--- a/sections/expectations.liquid
+++ b/sections/expectations.liquid
@@ -51,8 +51,8 @@
     max-width: 100% !important;
   }
   .img-expect{
-    max-width: 100%;
-    max-height: unset;
+    max-width: 100% !important;
+    max-height: unset !important;
   }
 {% endstyle %}
 </section>
