--- a/sections/featured-collection.liquid
+++ b/sections/featured-collection.liquid
@@ -10,24 +10,25 @@
 {%- endcomment -%}
 
 <section class="bg-[#c4c4c433] featured-collection relative flex items-center flex-col">
-  <div class="absolute -top-3 px-11 w-full max-w-740">
-  <div>
-    <img width="54" height="48" src="{{ 'figures-mob.png' | asset_img_url }}" />
-  </div>
-   </div>
+  <div class="flex justify-center items-center">
+    {% if section.settings.image1 != blank %}
+    {% include 'responsive-image' with
+        image: section.settings.image1,
+        max_width: '375',
+        max_height: '300'  
 
-  <div class="flex justify-center text-center items-center flex-col mb-7">
-    {% if section.settings.title != blank %}
-        <h2 class="font-montserrat max-w-380 md:max-w-740 mt-8 md:px-8 md:text-4xl text-[22px] featured-collection__title">{{ section.settings.title }}</h2>
-      {% endif %}
-      <div class="mt-2 border-b-[5px] border-red-600 w-[227px]"></div>
+
+
+        
+    %}
+    {% endif %}
+
   </div>
-    
   <div class="justify-center items-center flex flex-col md:justify-around ">
   
   {%- assign collection = collections[section.settings.collection] -%}
 
-  {% for product in collection.products limit: 6 %}
+  {% for product in collection.products limit: 3 %}
   
     <a  href="{{ product.url | within: collection }}" class="featured-collection-item mx-4 xs:mx-7">
       <div class="max-w-[290px] md:max-w-740 flex flex-row items-center w-full px-2 xs:px-5 min-w-[240px] sm:min-w-740 py-4 bg-white mb-5 shadow-product rounded-rounded-3">
@@ -96,9 +97,9 @@
 
     </a>
   {% else %}
-    {% for i in (1..6) %}
+    {% for i in (1..3) %}
       <a href="#" class="featured-collection-item">
-        {% capture current %}{% cycle 1, 2, 3, 4, 5, 6 %}{% endcapture %}
+        {% capture current %}{% cycle 1, 2, 3 %}{% endcapture %}
         {{ 'product-' | append: current | placeholder_svg_tag: 'placeholder-svg placeholder-svg--small' }}
 
         <p>{{ 'homepage.onboarding.product_title' | t }}</p>
@@ -113,6 +114,11 @@
   {
     "name": "Featured collection",
     "settings": [
+      {
+        "type": "image_picker",
+        "id": "image1",
+        "label": "Image 1"
+      },
       {
         "type": "textarea",
         "id": "title",
